--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\ArrowScript.cs" />
      <Compile Include="Assets\Scripts\CharacterController.cs" />
      <Compile Include="Assets\Scripts\MainMenuScript.cs" />
      <None Include="Assets\infos.txt.txt" />
